--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/table_background"
     android:tileMode="repeat"
-    tools:context="com.codeclan.amymorrison.toptrumps.MainActivity">
+    tools:context="com.codeclan.amymorrison.toptrumps.controllers.MainActivity">
 
 
     <Button
