--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,66 +127,67 @@
     <!--</android.support.v7.widget.Toolbar>-->
 
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/bet_toolbar"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_list_view_in_fragment">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/bet_toolbar"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_list_view_in_fragment">
+            <TextView
+                android:id="@+id/playerBetViewLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Current bet: "
+                android:textColor="@color/toolbarLabel" />
 
-        <TextView
-            android:id="@+id/playerBetViewLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Current bet: "
-            android:textColor="@color/toolbarLabel" />
+            <TextView
+                android:id="@+id/playerBetView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/toolbarText" />
 
-        <TextView
-            android:id="@+id/playerBetView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/toolbarText" />
+            <TextView
+                android:id="@+id/playerBankViewLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="Bank: "
+                android:textColor="@color/toolbarLabel" />
 
-        <TextView
-            android:id="@+id/playerBankViewLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Bank: "
-            android:textColor="@color/toolbarLabel" />
+            <TextView
+                android:id="@+id/playerBankView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/toolbarText" />
 
-        <TextView
-            android:id="@+id/playerBankView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/toolbarText" />
+            <TextView
+                android:id="@+id/playerCashViewLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="Cash: "
+                android:textColor="@color/toolbarLabel" />
 
-        <TextView
-            android:id="@+id/playerCashViewLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Cash: "
-            android:textColor="@color/toolbarLabel" />
+            <TextView
+                android:id="@+id/playerCashView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/toolbarText" />
+        </android.support.v7.widget.Toolbar>
 
-        <TextView
-            android:id="@+id/playerCashView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/toolbarText" />
-    </android.support.v7.widget.Toolbar>
 
     <GridView
         android:id="@+id/dealer_card_grid"
         android:layout_width="360dp"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
         android:numColumns="5"
         app:layout_constraintBottom_toTopOf="@+id/bet_button_view"
         app:layout_constraintStart_toStartOf="parent"
