--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:drawable/screen_background_dark_transparent"
+        android:background="@android:drawable/list_selector_background"
         android:onClick="raiseBet"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,7 +93,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.403"
-        app:srcCompat="@drawable/bet_chip" />
+        app:srcCompat="@drawable/chips" />
 
 
     <android.support.v7.widget.RecyclerView
