--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:drawable/list_selector_background"
+        android:background="@drawable/bet_chip"
         android:onClick="raiseBet"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -136,7 +136,6 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/card_list_view_in_fragment">
 
@@ -194,19 +193,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.996" />
 
-    <Button
-        android:id="@+id/cash_out_btn"
-        android:layout_width="93dp"
-        android:layout_height="59dp"
-        android:layout_marginBottom="272dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Cash out"
-        android:onClick="player_cash_out"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toEndOf="@+id/play_btn" />
 
     <Button
         android:id="@+id/double_down_btn"
