--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,11 +52,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
-        android:backgroundTint="?attr/colorControlHighlight"
         android:onClick="stand"
         android:text="Stand"
-        android:textColor="@android:color/holo_red_dark"
+
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/card_list_view_in_fragment"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +81,7 @@
 
     <ImageButton
         android:id="@+id/bet_button_view"
+
         android:layout_width="54dp"
         android:layout_height="49dp"
         android:layout_marginBottom="8dp"
@@ -90,6 +89,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bet_chip"
+        android:padding="10dp"
         android:onClick="raiseBet"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
